Add logging for failed config operations